<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:menu="@menu/menu_edit_course"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/add_new_course"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <EditText
        android:id="@+id/add_course_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_with_corner"
        android:elevation="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_with_corner"
        android:elevation="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">

            <TextView
                android:id="@+id/edit_tv_title_start_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_week"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_edt_start_week"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/edit_tv_title_end_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_week"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_edt_end_week"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <CheckBox
                android:id="@+id/edit_ck_is_odd_or_even"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/is_odd_week_or_even_week" />

            <RadioGroup
                android:id="@+id/add_course_rgb_week_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/add_course_radio_odd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/odd" />

                <RadioButton
                    android:id="@+id/add_course_radio_even"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/even" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_with_corner"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="2dp">

        <EditText
            android:id="@+id/add_course_classroom"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/white"
            android:hint="@string/classroom"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry" />

        <EditText
            android:id="@+id/add_course_teacher"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/white"
            android:hint="@string/teacher"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/time"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/add_course_spinner_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/weekDay"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_class_index"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_edt_start_index"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/course_length"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_edt_class_length"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_course_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_with_corner"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/save"
        android:textSize="16sp" />

</LinearLayout>