<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/checklistScreen">

    <fragment
        android:id="@+id/taskListScreen"
        android:name="com.maureen.schedule.view.fragment.TasksFragment"
        android:label="@string/task_list"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/editTaskScreen"
        android:name="com.maureen.schedule.view.fragment.TaskDetailFragment"
        android:label="@string/edit_task"
        tools:layout="@layout/fragment_edit_task">

    </fragment>

    <dialog
        android:id="@+id/editChecklistDialog"
        android:name="com.maureen.schedule.view.fragment.EditChecklistDialog"
        tools:layout="@layout/dialog_edit_checklist" />

    <dialog
        android:id="@+id/moreActionDialog"
        android:name="com.maureen.schedule.view.fragment.MoreActionBottomSheetDialog"
        tools:layout="@layout/dialog_bottom_sheet_more_action" />

    <fragment
        android:id="@+id/checklistScreen"
        android:name="com.maureen.schedule.view.fragment.ChecklistFragment"
        android:label="@string/checklist"
        tools:layout="@layout/fragment_checklist" />
</navigation>