<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/add_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_course_classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/classroom"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_course_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher"
        android:importantForAutofill="no"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_class_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="2"
            android:text="@string/time"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_class_time"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/add_course_spinner_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/weekDay" />

            <Spinner
                android:id="@+id/add_course_spinner_period"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/period"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_time"
            android:layout_toEndOf="@id/tv_class_time">

            <Spinner
                android:id="@+id/add_course_spinner_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/course_count" />

            <Spinner
                android:id="@+id/add_course_spinner_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/course_count" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_course_tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/save"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/add_course_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/add_course_tv_submit"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>